# Sim-D

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  FindSystemC.cmake  INSTALL  LICENSE  README
data/cnn_convolution/: constants.txt
data/kfusion/: halfSampleRobustImage_constants.txt  track_constants.csv  track_transformMats.csv
data/stencil/: constants.txt
docs/images/mc/: StrideSequencer.dia
include/model/: Buffer.h  Register.h  reg_read_req.h  request_target.h  stride_descriptor.h  workgroup_width.h
include/util/: Ringbuffer.h  SimdTest.h  constmath.h  csv.h  ddr4_lid.h  debug_output.h  defaults.h  parse.h  sched_opts.h
launch/: README  ch5_4_3_idxit_1bg_2b.sh  ch5_4_3_idxit_2bg_2b.sh  ch5_4_3_idxit_2bg_2b_w.sh  ch5_4_3_idxit_8b.sh  ch5_5_1_unit.sh  ch5_5_2_tile_3x3_p1.sh  ch5_5_2_tile_3x3_p1_actcas.sh  ch5_5_2_tile_3x3_p2.sh  ch5_5_2_tile_5x5_p1.sh  ch6_2_2_param_cfg.sh  ch6_2_3_param_avg.sh  ch7_5_1_sched_avg.sh  ch7_5_2_sched_wcet.sh  ch7_5_3_1_sched_unroll.sh  ch7_5_3_3_sched_tiling.sh
launch/sim/: cnn_convolution.sh  cnn_maxpool.sh  cnn_relu.sh  cnn_relu_fc.sh  fft.sh  kfusion_depth2vertex.sh  kfusion_halfSampleRobustImage.sh  kfusion_track.sh  kfusion_vertex2normal.sh  mriq_computePhiMag.sh  mriq_computeQ.sh  spmv.sh  srad.sh  srad2.sh  srad_reduce.sh  stencil.sh  stencil_sp.sh
launch/sim/nvec/: fft_ld2vec_stidx.sh  fft_ld2vec_stsp.sh  fft_ldsp_stidx.sh  fft_naive.sh
launch/sim/tiling/: kfusion_vertex2normal_128x8.sh  kfusion_vertex2normal_64x16.sh
launch/sim/unroll/: cnn_convolution_unroll.sh  mriq_computeQ_unroll2.sh  mriq_computeQ_unroll4.sh
launch/wcet/: cnn_convolution.sh  cnn_maxpool.sh  cnn_relu.sh  cnn_relu_fc.sh  fft.sh  kfusion_depth2vertex.sh  kfusion_halfSampleRobustImage.sh  kfusion_track.sh  kfusion_vertex2normal.sh  mriq_computePhiMag.sh  mriq_computeQ.sh  spmv.sh  srad.sh  srad2.sh  srad_reduce.sh  stencil.sh  stencil_sp.sh
launch/wcet/nvec/: fft_ld2vec_stidx.sh  fft_ld2vec_stsp.sh  fft_ldsp_stidx.sh  fft_naive.sh
launch/wcet/tiling/: kfusion_vertex2normal_128x8.sh  kfusion_vertex2normal_64x16.sh
launch/wcet/unroll/: cnn_convolution_unroll.sh  mriq_computeQ_unroll2.sh  mriq_computeQ_unroll4.sh
results/: README
results/ch6_1_1_resource_usage_kepler/: kernel_stats.txt  kernels.ods  plot_hist.gp
results/ch6_2_parameter_sensitivity/: SP_transpose.csv  design_space_sp32_transpose.csv  plot_design_space_SP32.gp  plot_sp.gp
results/ch6_3_avg_case/: average_case_transpose.csv  plot_average_case.gp
results/ch7_5_1_sched_avg_case/: arch_sched_policy_sp32.eps  plot_scheduling_policy_sp32.gp  sched_policy_sp32_ddr3200_transpose.csv
results/ch7_5_2_sched_WCET/: .~lock.rawdata_filtered.csv#  ranges.gp  rawdata_filtered.csv  rawdata_high.csv
results/ch7_5_3_1_sched_loop_unroll/: cnnconv_unroll_design_space_transpose.csv  mriq_unroll_design_space_transpose.csv  plot_cnnconv_unroll.gp  plot_mriq_unroll.gp  plot_mriq_unroll2.gp  ranges_unroll.gp  rawdata_unroll.csv
results/ch7_scheduling_policies/: cnn_conv_heatmap_b.txt  cnn_conv_heatmap_earlyrfc.txt  cnn_conv_x2_rest_dramsp_heatmap.txt  cnn_conv_x2_restr_heatmap.txt  heatmap_fft_nocmpsp.txt  heatmap_fft_un.txt  hm_conv_4wg.txt  hm_conv_4wg_pw.txt  pathos.c  pathos.txt  plot_drift.gp  plot_heatmap.gp  plot_heatmap_fft.gp  plot_heatmap_rfc.gp  plot_pathos.gp
src/: main.cpp  wcet.cpp
src/compute/: CMakeLists.txt  compute.cpp
src/compute/control/: BufferToPhysXlat.h  CtrlStack.h  IDecode.h  IDecode_1S.h  IDecode_3S.h  IExecute.h  IFetch.h  IMem.h  RegFile.h  RegHazardDetect.h  RegHazardDetect_1R1W_16b.h  RegHazardDetect_3R1W.h  Scoreboard.h  SimdCluster.h  WorkScheduler.h
src/compute/model/: compute_stats.h  ctrlstack_entry.h  imem_request.h  work.h
src/compute/test/: Test_BufferToPhysXlat.cpp  Test_CtrlStack.cpp  Test_IDecode_1S.cpp  Test_IExecute.cpp  Test_IFetch.cpp  Test_IMem.cpp  Test_RegFile_1S_3R1W.cpp  Test_Scoreboard.cpp  Test_SimdCluster.cpp  Test_WorkScheduler.cpp
src/isa/: CMakeLists.txt  print.cpp
src/isa/analysis/: ControlFlow.cpp  ControlFlow.h  CycleSim.cpp  CycleSim.h  DRAMSim.cpp  DRAMSim.h  TimingDAG.cpp  TimingDAG.h
src/isa/model/: BB.cpp  BB.h  CFGEdge.cpp  CFGEdge.h  DAG.cpp  DAG.h  Instruction.cpp  Instruction.h  Loop.cpp  Loop.h  Metadata.cpp  Metadata.h  Operand.cpp  Operand.h  Program.cpp  Program.h  ProgramPhaseList.cpp  ProgramPhaseList.h
src/kernels/: cnn_convolution.sas  cnn_convolution_unrollx.sas  cnn_maxpool.sas  cnn_relu.sas  cnn_relu_fc.sas  fft_ld2vec_stidx.sas  fft_ld2vec_stsp.sas  fft_ldsp_stidx.sas  fft_ldsp_stsp.sas  fft_naive.sas  kfusion_depth2vertex.sas  kfusion_halfSampleRobustImage.sas  kfusion_track.sas  kfusion_vertex2normal_128x8.sas  kfusion_vertex2normal_32x32.sas  kfusion_vertex2normal_64x16.sas  mriq_computePhiMag.sas  mriq_computeQ.sas  mriq_computeQ_unroll2.sas  mriq_computeQ_unroll4.sas  spmv.sas  srad.sas  srad2.sas  srad_reduce.sas  stencil.sas  stencil_sp.sas
src/mc/: CMakeLists.txt  mc.cpp  mcIdx.cpp
src/mc/control/: Backend.h  CmdArb_DDR4.h  CmdGen_DDR4.h  DQ.h  Storage.h  StrideSequencer.h
src/mc/model/: DQ_reservation.h  burst_request.h  cmd_DDR.h  cmdarb_stats.cpp  cmdarb_stats.h  storage_ll_elem.h
src/mc/test/: Test_CmdArb_DDR4.cpp  Test_CmdGen_DDR4.cpp  Test_DQ.cpp  Test_IdxIterator.cpp  Test_StrideSequencer.cpp
src/model/: Buffer.cpp  Register.cpp  stride_descriptor.cpp
src/sp/: CMakeLists.txt
src/sp/control/: DQ.h  Scratchpad.h  StorageArray.h  StrideSequencer.h
src/sp/model/: DQ_reservation.h
src/sp/test/: Test_DQ.cpp  Test_Scratchpad.cpp  Test_StorageArray.cpp  Test_StrideSequencer.cpp
src/stridegen/: CMakeLists.txt  sp_stridegen.cpp  stridegen.cpp
src/util/: CMakeLists.txt  SimdTest.cpp  cmp_kfusion_track.cpp  csv.cpp  ddr4_idx.cpp  ddr4_lid.cpp  ddr4_lid_main.cpp  debug_output.cpp  parse.cpp  sched_opts.cpp
